# libshvproto-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: device.rs
libshvproto-macros/: Cargo.toml
libshvproto-macros/src/: lib.rs
src/: chainpack.rs  client.rs  connection.rs  cpon.rs  datetime.rs  decimal.rs  framerw.rs  lib.rs  metamap.rs  metamethod.rs  reader.rs  rpc.rs  rpcframe.rs  rpcmessage.rs  rpctype.rs  rpcvalue.rs  serialrw.rs  shvnode.rs  socketrw.rs  streamrw.rs  util.rs  writer.rs
src/broker/: broker.rs  brokerimpl.rs  call.rs  config.rs  mod.rs  node.rs  peer.rs  state.rs  test.rs
src/device/: mod.rs
tests/: broker_basic_structure.rs  child-broker-config.yaml  test.rs  test_broker.rs  test_cp2cp.rs  test_shvcall.rs
tests/common/: mod.rs
