[package]
name = "shvproto"
version = "3.0.0"
edition = "2021"

[dependencies]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main", features = ["stderr"] }

log = "0.4.21"
bytes = "1.6.0"
chrono = "0.4.38"
hex = "0.4.3"
clap = { version = "4.5.7", features = ["derive"] }

[[bin]]
name = "cp2cp"
